chore: correction of first page of course demmanded!

--- a/hello/index.html
+++ b/hello/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br"en">
+<html lang="pt-br"> <!-- Não pode haver mais que um idioma "principal" na página! -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
