--- a/hello/index 2.html
+++ b/hello/index 2.html
@@ -14,5 +14,20 @@
     <p> se precisar quebrar o texto em algum lugar especifico <br> como esse,voce pode usar a tag &lt;br&gt;.
 
     </p>
+    <p>vamos adiciomar mmais alguns simbolos especiais :
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &delta;
+        &uparrow;
+        <p> 
+<p>vamos adicionar alguns emoji;
+    &#x1F384;
+</p>
+    
 </body>
 </html>
