--- a/index 3.html
+++ b/index 3.html
@@ -10,7 +10,7 @@
     <h1>testando carga e imagens</h1>
     <p>abaixo voce vai ver uma imagem que está na mesma pagina.</p>
     <img src="logo html full.webp" alt="logo html">
-    
+    <img src="css-logo.webp" alt="logo css3">
     
 </body>
 </html>
