--- a/hello/index.html
+++ b/hello/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br"> <!-- Não pode haver mais que um idioma "principal" na página! -->
+<html lang="pt_br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" 
-    content="width=device-width, initial-scale=1.0">
-    <title>meu primeiro exercicio</title>
+    <meta name="viewport" content="width=0, initial-scale=1.0">
+    <title>exemplo de sematica</title>
 </head>
+<body>{
+    backgraund-color   blue ;
+}
+<style>
+     </head>
 <body>
-    <h1>olá mundo!</h1>
-    <p>Esse é o meu primeiro documento html</p>
-</body>
-</html>
+    <p>
+        eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
+            </p>
+        </body>
+        </head >
