--- a/hello/index.html
+++ b/hello/index.html
@@ -7,12 +7,12 @@
     <title>exemplo de sematica</title>
 </head>
 <body>{
-    backgraund-color   blue ;
+    eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
 }
 <style>
      </head>
 <body>
-    <p>
+    <p> 
         eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
             </p>
         </body>
