--- a/hello/index.html
+++ b/hello/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=0, initial-scale=1.0">
     <title>exemplo de sematica</title>
-</head>
+
 <body>{
-    eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
+    background-color blue
 }
-<style>
-     </head>
+    <style>
+</head>
 <body>
     <p> 
         eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
