--- a/hello/index.html
+++ b/hello/index.html
@@ -7,11 +7,11 @@
     <title>exemplo de sematica</title>
 
 <body>{
-    background-color blue ;
+    eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
 }
     <style>
 </head>
-<body>
+<body style="background-color:blue">
     <p> 
         eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
             </p>
