--- a/hello/index.html
+++ b/hello/index.html
@@ -11,7 +11,7 @@
 }
     <style>
 </head>
-<body style="background-color:blue">
+<body style="background-color:blue;">
     <p> 
         eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
             </p>
