fix: correct changes

--- a/hello/index.html
+++ b/hello/index.html
@@ -5,15 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=0, initial-scale=1.0">
     <title>exemplo de sematica</title>
-
-<body>{
-    eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
-}
-    <style>
 </head>
 <body style="background-color:blue;">
-    <p> 
-        eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
-            </p>
-        </body>
-        </head >
+    <p>eu moro na <address> rua dos capixabas , 229 - Botafogo - rj </address></p>
+</body>
+</html>
