--- a/hello/index.html
+++ b/hello/index.html
@@ -7,6 +7,10 @@
     <title>exemplo de sematica</title>
 </head>
 <body style="background-color:blue;">
-    <p>eu moro na <address> rua dos capixabas , 229 - Botafogo - rj </address></p>
-</body>
+    eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
+
+    <p> 
+        eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
+            </p>
+        </body>
 </html>
