--- a/hello/index.html
+++ b/hello/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=0, initial-scale=1.0">
     <title>exemplo de sematica</title>
 </head>
-<body style="background-color:blue;">
+<body style="background-color:rgb(133, 30, 218);">
     eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
 
     <p> 
