--- a/hello/index.html
+++ b/hello/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt_br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=0, initial-scale=1.0">
-    <title>exemplo de sematica</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-<body style="background-color:rgb(133, 30, 218); color:rgb(255, 255, 255)">
-    eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
-
-    <p> 
-        eu moro na <address> rua dos capixabas , 229 - bota fogo - rj </address> 
-            </p>
-        </body>
+<body>
+    <h1>principias formatações 
+        <h2>negrito/destaque</h2>
+        <p>messa frase temos um <b>termo em negrito</b> usamos a tag b </p> 
+</body>
 </html>
