--- a/hello/index.html
+++ b/hello/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>principias formatações 
         <h2>negrito/destaque</h2>
-        <p>messa frase temos um <b>termo em negrito</b> usamos a tag b </p> 
+        <p>nesa frase temos um <b>termo em negrito</b> usamos a tag b </p> 
 </body>
 </html>
