--- a/hello/index.html
+++ b/hello/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>principias formatações 
         <h2>negrito/destaque</h2>
-        <p>nesa frase temos um <b>termo em negrito</b> usamos a tag b </p> 
+        <p>nesa frase temos um <b>termo em negrito</b> usamos a tag b(não semantica).</p> 
+        <p> nessa frase , temos um <strong> termo destaque</strong>usando a tag strong  </p>
+        <h2>italico/Ênsafe</h2>
+        <p>nessa frase temos um <i>termo em italico</i>  usando a tag i (não semantica).</p>
+        <p> nesta frase , temos um <em>termo em enfase</em>  usando a tag Em (semantica)  </p>
 </body>
 </html>
