--- a/hello/index.html
+++ b/hello/index.html
@@ -14,5 +14,6 @@
         <h2>italico/Ênsafe</h2>
         <p>nessa frase temos um <i>termo em italico</i>  usando a tag i (não semantica).</p>
         <p> nesta frase , temos um <em>termo em enfase</em>  usando a tag Em (semantica)  </p>
+        <p>podemos usa tambem <mark style="background-color:aquamarine;">um texto marcado </mark>  a tag MARK.</p>
 </body>
 </html>
