--- a/hello/index.html
+++ b/hello/index.html
@@ -15,5 +15,7 @@
         <p>nessa frase temos um <i>termo em italico</i>  usando a tag i (não semantica).</p>
         <p> nesta frase , temos um <em>termo em enfase</em>  usando a tag Em (semantica)  </p>
         <p>podemos usa tambem <mark style="background-color:pink;">um texto marcado </mark>  a tag MARK.</p>
+        <p> e no outro paragrafo, temos <mark>temos outro texto marcado </mark> no final. </p>
+
 </body>
 </html>
