--- a/hello/index.html
+++ b/hello/index.html
@@ -16,6 +16,17 @@
         <p> nesta frase , temos um <em>termo em enfase</em>  usando a tag Em (semantica)  </p>
         <p>podemos usa tambem <mark style="background-color:pink;">um texto marcado </mark>  a tag MARK.</p>
         <p> e no outro paragrafo, temos <mark>temos outro texto marcado </mark> no final. </p>
+        <h2>texto grande e pequeno </h2>
+        <p> estamos criando um <big> texto grande </big> e um <smal> textopequeno </smal> nesse paragrafo . </p>
+        <h2>texto deletado</h2>
+        <p>podemos marcar <del>um texto como excluido</del> para indecar que ele , deve ser lido ,mas não considerado .</p>
+        <h2> texto inserido</h2>
+        <p> podemos marcar um texto como inserido para dar uma enfase e indicar que ele foi adicionado depois.  </p>
+        <p>existe tambem o <u>sublinhado </u> com a tag u ( não semantica)</p>
+        <h2>texto sobrescrito</h2>
+        <p>para insirir coisas do tipo x <sup>20</sup> +3 </p>
+        <h2>texto subiscrito</h2>
+        <p>para inserir coisas do tipo H <sub>2 </sub>0</p>
 
 </body>
 </html>
