--- a/hello/index.html
+++ b/hello/index.html
@@ -3,30 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>outras formataçoes </title>
 </head>
 <body>
-    <h1>principias formatações 
-        <h2>negrito/destaque</h2>
-        <p>nesa frase temos um <b>termo em negrito</b> usamos a tag b(não semantica).</p> 
-        <p> nessa frase , temos um <strong> termo destaque</strong>usando a tag strong  </p>
-        <h2>italico/Ênsafe</h2>
-        <p>nessa frase temos um <i>termo em italico</i>  usando a tag i (não semantica).</p>
-        <p> nesta frase , temos um <em>termo em enfase</em>  usando a tag Em (semantica)  </p>
-        <p>podemos usa tambem <mark style="background-color:pink;">um texto marcado </mark>  a tag MARK.</p>
-        <p> e no outro paragrafo, temos <mark>temos outro texto marcado </mark> no final. </p>
-        <h2>texto grande e pequeno </h2>
-        <p> estamos criando um <big> texto grande </big> e um <smal> textopequeno </smal> nesse paragrafo . </p>
-        <h2>texto deletado</h2>
-        <p>podemos marcar <del>um texto como excluido</del> para indecar que ele , deve ser lido ,mas não considerado .</p>
-        <h2> texto inserido</h2>
-        <p> podemos marcar um texto como inserido para dar uma enfase e indicar que ele foi adicionado depois.  </p>
-        <p>existe tambem o <u>sublinhado </u> com a tag u ( não semantica)</p>
-        <h2>texto sobrescrito</h2>
-        <p>para insirir coisas do tipo x <sup>20</sup> +3 </p>
-        <h2>texto subiscrito</h2>
-        <p>para inserir coisas do tipo H <sub>2 </sub>0</p>
+    <h1>Outras formatações</h>
+        <h2>Código-fonte / Pré-formatação</h2>
+        <p>0 comando <code>document.getElementById('teste')</code> é escrito em linguagem JavaScript.</p>
+        <pre>
+            <code>
+                num=int(input('Digite um número'))
+                if num % 2 == 0:
+                print(f'0 número {num} é PAR')
+                else:
+                print(f'0 número {num} é ÍMPAR') 19 print('Fim do programa')
+            </code>
+        </pre>
+        <h2>Citações simples</h2>
+        <p>Como diria o pai de um amigo: <q>o computador é um
 
+            burro muito rápido</q></p>
+            <h2>Citações completas</h2>
+            <p>Segundo Jeff Noble, no seu livro HTML para Leigos:</p> <blockquote cite="https://books.google.com.br/books? id=E8ZtDWAAQBAJ&pg=PA17&dq=HTML&hl=pt-BR&sa=X&
+
+            ved=0ahUKEwjH5-PevNboAhVNIbkGH coxC0gQ6AE IOJAC#v=onepage& q=HTML&f=false">"
+            A diferença entre elementos inline e um bloco de
+
+           texto é importante. Os elementos HTML neste capítulo descrevem os blocos de texto.
+        </blockquote>
+        <h2>Abreviações</h2>
+        p>Estou estudando <abbr title="HyperText Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>. Estou adorando!</p>
+        
+
+
+            
 </body>
 </html>
