--- a/hello/index.html
+++ b/hello/index.html
@@ -25,7 +25,12 @@
    <li>Leite</li>
    <li>Tomate</li>
    <li>Alface</li>
+   <li>manteiga</li>
+   <li>arroz</li>
+   <li>feijão</li>
+   
 </ul>
+
 
 </body>
 </html>
