--- a/hello/index.html
+++ b/hello/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Trabalhando com Listas</h1>
-<h2>Listas Ordenadas: /h2>
+<h2>Listas Ordenadas: </h2>
 <ol type="i"> <!-- 1 A a I i -->
    <li>Acordar</li>
    <li>Ligar para o João</li> <li>Tomar café</li>
@@ -28,6 +28,7 @@
    <li>manteiga</li>
    <li>arroz</li>
    <li>feijão</li>
+
    
 </ul>
 
