--- a/hello/index.html
+++ b/hello/index.html
@@ -30,7 +30,7 @@
    <li>feijão</li>
 
 </ul>
-<h2> minhas linguagens favoritas <h2>
+<h2> minhas linguagens favoritas </h2>
     <Ol>
     <Li> antigas</li>
     <Ol types="a">
@@ -66,7 +66,7 @@
     <Li>PlayStation</li>
     
     <Li>Final Fantasy</li>
-    <Li> Castlevania>
+    <Li> Castlevania
     
       </Ol>
     </Ol>
