--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -21,11 +21,11 @@
 
 <picture>
 
-<source media="(max-width: 750px)" srcset="imagem naruto pnp.jpg" type="image/png">
+<source media="(max-width: 750px)" srcset="imagem-naruto-pnp.jpg" type="image/png">
 
-<source media ="(max-width: 1050px)" srcset="imagem sasuke png.jpg" type="image/png">
+<source media ="(max-width: 1050px)" srcset="imagem-sasuke-png.jpg" type="image/png">
 
-<img src= "imagem skura png.pjg" alt="Imagem flexivel">
+<img src= "imagem-sakura-png.pjg" alt="Imagem flexivel">
 
 </picture>
 
