--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -25,7 +25,7 @@
 
 <source media ="(max-width: 1050px)" srcset="imagem-sasuke-png.jpg" type="image/png">
 
-<img src= "imagem-sakura-png.pjg" alt="Imagem flexivel">
+<img src= "imagem-sakura-png.jpg " alt="Imagem flexivel">
 
 </picture>
 
