--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -21,9 +21,9 @@
 
 <picture>
 
-<source media="(max-width: 750px)" srcset="imagem-naruto-pnp.jpg" type="image/png">
+<source media="(max-width: 750px)" srcset="imagem-naruto-pnp.jpg" type="image/png.jpg">
 
-<source media ="(max-width: 1050px)" srcset="imagem-sasuke-png.jpg" type="image/png">
+<source media ="(max-width: 1050px)" srcset="imagem-sasuke-png.jpg" type="image/png.jpg">
 
 <img src= "imagem-sakura-png.jpg" alt="Imagem flexivel">
 
