--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -23,7 +23,7 @@
 
 <source media="(max-width: 750px)" srcset="imagem-naruto-pnp.jpg" type="image/png.jpg">
 
-<source media ="(max-width: 1050px)" srcset="imagem-sasuke-png.jpg" type="image/png.jpg">
+<source media ="(max-width: 1050px)" srcs="imagem-sasuke-png.jpg" type="image/png.jpg">
 
 <img src= "imagem-sakura-png.jpg" alt="Imagem flexivel">
 
