--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,56 +1,30 @@
-
 <!DOCTYPE html>
-
 <html lang="pt-br">
 <head>
-
-<meta charset="UTF-8"> 
-
-<meta name="viewport" content= "width=device-iwdth, initial-scale=1.0">
-
-<title>  midias em html </title> 
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>estilo inline</title>
 </head>
-<body>
+
+<body style="background-color: lightskyblue; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">
 
 
-<h1>Imagen dinamica</h1> 
-<p> Tente abrir esse site em vários dispositivos diferentes ou simplesmente aumente e diminua o tamanho do seu navegador. <p>
+<hi style="color: Omediumblue; background-color: dodgerblue;
+
+font-size: 1.5em;">Capitulo 1</h1> <h2 style="color: Odarkred; font-size: 1.2em;">Capítulo 1.1</h2> 11 <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit assumenda itaque vitae optio modi quaerat aperiam perspiciatis dignissimos sit repudiandae asperiores ipsam officii aliquid explicabo quis fuga nesciunt, esse possimus./p
 
 
+<h2 style="color: darkred; font-size: 1.2em;">Capítulo 1.2</h2> <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis omnis illo sunt, accusantium quaerat provident quam eius consequuntur quae veritatis id alias laudantium porro natus expedita, hic et recusandae?</p> <hi style="color: Omediusblue; font-size: 1.5em; background-color:
 
-<picture>
+dodgerblue; ">Capítulo 2</h1>
 
-    <img src= "imagem-naruto-png.jpg" alt="Imagem flexivel">
-    <img src= "imagem-sasuke-png.jpg" alt="Imagem flexivel">
 
-<img src= "imagem-sakura-png.jpg" alt="Imagem flexivel">
-
-</picture>
-
-<h1>Reproduzindo Audio</h1>
-
-<p>Vamos aprender a reproduzir áudios em HTML5.</p>
-<audio preload="metadata" autoplay controls loop> <source src="midia/guanacast-33.mp3" type="audio/mpeg"> 
-
-<source src="midia/guanacast-33.ogg" type="audio/ogg">
-
-<source src="midia/guanacast-33.wav" type="audio/wav">
-
-<p>Infelizmente seu navegador não consegue reproduzir áudio. <a
-
-href="midia/guanacast-33.mp3">Clique aqui para baixar o arquivo
-
-MP3</a></p>
-
-</audio>
+<h2 style="color: Odarkred; font-size: 1.2em;">Capítulo 2.1</h2> <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus blanditiis earum molestiae quasi, repellendus quis assumenda nesciunt quo, ullam animi aspernatur deserunt aliquam deleniti totam aut culpa dolorem reprehenderit facere?</p>
 
 </body>
 
 </html>
-
-
-
 
 
 
