--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,31 +1,61 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>estilo inline</title>
+DOCTYPE html
+
+html lang="pt-br
+
+head)
+
+<meta charset="UTF-8"
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
+<title>Estilos Locais / Internos</title>
+
+<style>
+
+body {
+
+background-color: #lightsteelblue;
+
+font-family: Arial, Helvetica, sans-serif;
+
+font-size: 20px;
+
+}
+  h1
+
+color:darkblue;
+
+background-color: lightblue;
+
+}
+
+h2 { 
+
+color: darkred;
+} 
+
+
+text-align: justify;
+
+
+
+
+</style>
+
+
 </head>
 
-<body style="background-color: lightskyblue; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">
+body
 
+<hi Capitulo 1/h1>
 
-<hi style="color: Omediumblue; background-color: dodgerblue;
+h2 Capitulo 1.1/h2> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit assumenda itaque vitae optio modi quaerat aperiam perspiciatis dignissimos sit repudiandae asperiores ipsam officiis aliquid explicabo quis fuga nesciunt, esse possimus.</p> ch2 Capitulo 1.2 /h2>
 
-font-size: 1.5em;">Capitulo 1</h1> <h2 style="color: Odarkred; font-size: 1.2em;">Capítulo 1.1</h2> 11 <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit assumenda itaque vitae optio modi quaerat aperiam perspiciatis dignissimos sit repudiandae asperiores ipsam officii aliquid explicabo quis fuga nesciunt, esse possimus./p
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis omnis illo sunt, accusantium quaerat provident quam eius consequuntur quae veritatis id alias laudantium porro natus expedita, hic et recusandae?</p
 
+chi Capitulo 2</h1
 
-<h2 style="color: darkred; font-size: 1.2em;">Capítulo 1.2</h2> <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis omnis illo sunt, accusantium quaerat provident quam eius consequuntur quae veritatis id alias laudantium porro natus expedita, hic et recusandae?</p> <hi style="color: Omediusblue; font-size: 1.5em; background-color:
-
-dodgerblue; ">Capítulo 2</h1>
-
-
-<h2 style="color: Odarkred; font-size: 1.2em;">Capítulo 2.1</h2> <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus blanditiis earum molestiae quasi, repellendus quis assumenda nesciunt quo, ullam animi aspernatur deserunt aliquam deleniti totam aut culpa dolorem reprehenderit facere?</p>
-
-</body>
-
-</html>
-
+S ch2 Capitulo 2.1</h2>
 
 
 
