--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -23,7 +23,7 @@ font-size: 20px;
 }
   h1
 
-color:darkblue;
+color:darkred;
 
 background-color: lightblue;
 
@@ -31,7 +31,7 @@ background-color: lightblue;
 
 h2 { 
 
-color: darkred;
+color: goldenrod;
 } 
 
 
