--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,61 +1,47 @@
-DOCTYPE html
-
-html lang="pt-br
-
-head)
-
-<meta charset="UTF-8"
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
-<title>Estilos Locais / Internos</title>
-
-<style>
-
-body {
-
-background-color: #lightsteelblue;
-
-font-family: Arial, Helvetica, sans-serif;
-
-font-size: 20px;
-
-}
-  h1
-
-color:darkred;
-
-background-color: lightblue;
-
-}
-
-h2 { 
-
-color: goldenrod;
-} 
-
-
-text-align: justify;
-
-
-
-
-</style>
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>cores em css</title>
 </head>
+<body>
+  <!--representação por cores -->
+  <h2 style="background-color: blue; color: white;"> Exemplo de Cores</h2> 
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit, fom herum optio, 
+    architecto a sint consequatur quos vitae eos ducimus aspernatur sorre suscipit, possimus rem ipsa dolorem perferendis asperiores saepe velis? </p>
 
-body
+<!-- Representação por códigos Hexadecimals -->
+  <!--Decimal: 0 123456789-->
 
-<hi Capitulo 1/h1>
+<!--Hexadecimal: 0 123456789 ABCDEF-->
 
-h2 Capitulo 1.1/h2> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit assumenda itaque vitae optio modi quaerat aperiam perspiciatis dignissimos sit repudiandae asperiores ipsam officiis aliquid explicabo quis fuga nesciunt, esse possimus.</p> ch2 Capitulo 1.2 /h2>
+<h2 styles="background-color: #0000ff; color: #ffffff; Exemplo de Cores</h2> 
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, 
+  architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit, possimus rem ipsa dolorem perferendis asperiores saepe velit?</p>
+<!--Representação em RGB (Red, Green, Blue) -->
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis omnis illo sunt, accusantium quaerat provident quam eius consequuntur quae veritatis id alias laudantium porro natus expedita, hic et recusandae?</p
+<h2> style="background-color: rgb(0, 0, 255); color: rgb(255, 255, 255); </h2>
 
-chi Capitulo 2</h1
+"Exemplo de Cores</h2>
 
-S ch2 Capitulo 2.1</h2>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, 
+  architecto a sint consequatur quos vitae eos ducimus aspernatur porro
+suscipit, possimus rem ipsa dolorem perferendis asperiores saepe velit?</p> 
+<!--Representação por HSL (Hue, Sturation,-->
+
+
+<h2 style="background-color: HSL(240, 100%, 50%); color: hsl(0, 0, 100);"> exemplo de cores </h2> 
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit,
+   possimus rem ipsa dolorem perferendis asperiores saepe velit?:</p> 
+
+   <h2 style="background-color: HSL(240, 100%, 50%); color: hsl(0, 0, 100);"> exemplo de cores </h2> 
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit,
+   possimus rem ipsa dolorem perferendis asperiores saepe velit?:</p>
+
+</body>
+</html>
 
 
 
