--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -17,14 +17,12 @@
 
 <!--Hexadecimal: 0 123456789 ABCDEF-->
 
-<h2 styles="background-color: #0000ff; color: #ffffff; Exemplo de Cores</h2> 
+<h2 styles="background-color: #0000ff; color: #ffffff;"> Exemplo de Cores </h2> 
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, 
   architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit, possimus rem ipsa dolorem perferendis asperiores saepe velit?</p>
 <!--Representação em RGB (Red, Green, Blue) -->
 
-<h2> style="background-color: rgb(0, 0, 255); color: rgb(255, 255, 255); </h2>
-
-"Exemplo de Cores</h2>
+<h2 style="background-color: rgb(0, 0, 255); color: rgb(255, 255, 255);">Exemplo de Cores </h2>
 
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, 
   architecto a sint consequatur quos vitae eos ducimus aspernatur porro
@@ -32,11 +30,11 @@ suscipit, possimus rem ipsa dolorem perferendis asperiores saepe velit?</p>
 <!--Representação por HSL (Hue, Sturation,-->
 
 
-<h2 style="background-color: HSL(240, 100%, 50%); color: hsl(0, 0, 100);"> exemplo de cores </h2> 
+<h2 style="background-color: HSL(240, 100%, 50%); color: hsl(0, 0, 100);"> Exemplo de cores </h2> 
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit,
    possimus rem ipsa dolorem perferendis asperiores saepe velit?:</p> 
 
-   <h2 style="background-color: HSL(240, 100%, 50%); color: hsl(0, 0, 100);"> exemplo de cores </h2> 
+   <h2 style="background-color: rgba(27, 78, 33, 0.205); color: rgb(62, 156, 50);"> Exemplo de cores </h2> 
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit,
    possimus rem ipsa dolorem perferendis asperiores saepe velit?:</p>
 
