--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -17,7 +17,7 @@
 
 <!--Hexadecimal: 0 123456789 ABCDEF-->
 
-<h2 styles="background-color: #0000ff; color: #ffffff;"> Exemplo de Cores </h2> 
+<h2 style="background-color: #0000ff; color: #ffffff;"> Exemplo de Cores </h2> 
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, 
   architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit, possimus rem ipsa dolorem perferendis asperiores saepe velit?</p>
 <!--Representação em RGB (Red, Green, Blue) -->
@@ -30,7 +30,7 @@ suscipit, possimus rem ipsa dolorem perferendis asperiores saepe velit?</p>
 <!--Representação por HSL (Hue, Sturation,-->
 
 
-<h2 style="background-color: HSL(240, 100%, 50%); color: hsl(0, 0, 100);"> Exemplo de cores </h2> 
+<h2 style="background-color: HSL(240, 100%, 50%); color: hsl(0, 0%, 100%);"> Exemplo de cores </h2> 
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit,
    possimus rem ipsa dolorem perferendis asperiores saepe velit?:</p> 
 
