--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,46 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>cores em css</title>
+  <title>gradiante em css</title>
+  <style>
+    body {
+            background-image: -o-linear-gradient(to right,#D90188,#EE382A,#F4B40A);
+            background-attachment: fixed;
+    }
+  </style>
 </head>
 <body>
-  <!--representação por cores -->
-  <h2 style="background-color: blue; color: white;"> Exemplo de Cores</h2> 
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit, fom herum optio, 
-    architecto a sint consequatur quos vitae eos ducimus aspernatur sorre suscipit, possimus rem ipsa dolorem perferendis asperiores saepe velis? </p>
-
-<!-- Representação por códigos Hexadecimals -->
-  <!--Decimal: 0 123456789-->
-
-<!--Hexadecimal: 0 123456789 ABCDEF-->
-
-<h2 style="background-color: #0000ff; color: #ffffff;"> Exemplo de Cores </h2> 
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, 
-  architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit, possimus rem ipsa dolorem perferendis asperiores saepe velit?</p>
-<!--Representação em RGB (Red, Green, Blue) -->
-
-<h2 style="background-color: rgb(0, 0, 255); color: rgb(255, 255, 255);">Exemplo de Cores </h2>
-
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, 
-  architecto a sint consequatur quos vitae eos ducimus aspernatur porro
-suscipit, possimus rem ipsa dolorem perferendis asperiores saepe velit?</p> 
-<!--Representação por HSL (Hue, Sturation,-->
-
-
-<h2 style="background-color: HSL(240, 100%, 50%); color: hsl(0, 0%, 100%);"> Exemplo de cores </h2> 
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit,
-   possimus rem ipsa dolorem perferendis asperiores saepe velit?:</p> 
-
-   <h2 style="background-color: rgba(27, 78, 33, 0.205); color: rgb(62, 156, 50);"> Exemplo de cores </h2> 
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum harum optio, architecto a sint consequatur quos vitae eos ducimus aspernatur porro suscipit,
-   possimus rem ipsa dolorem perferendis asperiores saepe velit?:</p>
-
+  <h1> testando gradiante </h1>
 </body>
 </html>
-
 
 
 
