--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -7,7 +7,7 @@
   <title>gradiante em css</title>
   <style>
     body {
-            background-image: -o-linear-gradient(to right,#D90188,#EE382A,#F4B40A);
+            background-image: linear-gradient(to right,#D90188,#EE382A,#F4B40A);
             background-attachment: fixed;
     }
   </style>
