--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,39 +1,46 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>site de exemplo</title>
-    <link rel="stylesheet" href="style.css ">
-</head>
-<body>
- <main>
-    <h1>site de exemplo</h1>
-    <h2>titulo 1</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur a
-    dipisicing elit. Expedita explicabo eveniet iure vitae deleniti? Facilis non, fugit, 
-    ex expedita molestiae nobis nisi facere necessitatibus a totam explicabo illo,
-     veniam nam?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quos amet suscipit illo vitae natus iure nesciunt,
-     quam officia, neque odio aut quisquam nam debitis officiis a provident tenetur in.</p>
-    <h2>titulo 2</h2>
-     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae voluptatibus nesciunt, cum earum debitis, 
-      vel itaque necessitatibus fugit sapiente illo maiores eum quasi! Consequatur magni fugiat optio harum repudiandae fuga?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quas dolor voluptate quasi deleniti perferendis voluptatum doloremque temporibus magnam, 
-      fugit provident placeat magni, possimus assumenda officiis earum vel soluta nam.</p>
-     <h2>titulo 3</h2>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Repellat earum ea minima porro veniam cumque neque, 
-        cum laboriosam dicta voluptatibus et laborum ipsum suscipit sunt in? Aliquam sint neque beatae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae necessitatibus autem rem distinctio,
-         beatae sed qui itaque nostrum sequi voluptate facilis quas corporis, aperiam voluptatem mollitia sit in officiis perspiciatis?</p>
+!DOCTYPE html
 
- </main>   
-</body>
-</html>
+ <html lang="pt-br">
+
+ <head>
 
 
+<meta charset="UTF-8">
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Fontes em CSS</title>
+
+
+
+<style>
+
+body {
+
+font-family: Arial, Helvetica, sans-serif;
+
+
+}
+
+
+h1, h2  {                                                                                                                                                                                                             h2 {
+
+font-family: 'Times New Roman', Times, serif;
+
+}
+
+</style>
+
+</head>             
+<body> 
+  <h1> trabalho com fontes</h1>   
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+    Temporibus ipsa quibusdam commodi dicta ullam explicabo culpa distinctio? Iste autem officiis atque fuga distinctio placeat quia assumenda dicta laboriosam. Deserunt,
+     neque!</p>      
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam eveniet, 
+      illum et obcaecati deserunt fugit distinctio nobis maxime molestias animi perspiciatis nulla aliquid odit explicabo unde eius reprehenderit exercitationem minima.</p>                                                                                                                                                                        <body>
+<h2>subtitulo do texto</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magnam porro mollitia, 
+  enim aliquam obcaecati rerum sequi reprehenderit a officia quod quaerat ex, nobis saepe impedit odio. Ab, quasi quis.</p>
 
 
 
