--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -19,13 +19,17 @@ body {
 font-family: Arial, Helvetica, sans-serif;
 
 
-}
+/*
+medidas absolutas
+cm,ex,in,px,pt,pc
 
+medidas relativas
+em,ex,rem,vw,vh,%
+16 px geralmente = lem
+*/
 
-h1, h2  {                                                                                                                                                                                                             h2 {
-
-font-family: 'Times New Roman', Times, serif;
-
+font-size: lem ;
+                                                                                                                                                                                                
 }
 
 </style>
