--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -29,8 +29,32 @@ em,ex,rem,vw,vh,%
 */
 
 font-size: lem ;
-                                                                                                                                                                                                
+       
+/* 
+ligther normal bold bolder */
+
 }
+
+H1{
+
+/*Shorthand  font
+
+font-style->font-weight font-size font-family
+
+font-family: "Work Sans', sans-serif; font-weight: bolder;
+
+font-size: 3em;
+
+font-style: italic; */
+
+font: italic bolder 3em 'work Sans', sans-serif;
+
+}
+
+h2 {
+  font: bold 2em 'work sans';
+}
+
 
 </style>
 
