--- a/hello/fontes 02.html
+++ b/hello/fontes 02.html
@@ -1,34 +1,37 @@
-
 <!DOCTYPE html>
-<html lang=pt-br> 
+<html lang=pt-br>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fontes externas</title>
     <style>
-        @font-face{
-           font-family:love ;
-             src: url('LoveLadyPersonalUse') formal('opentype'),url('LoveLadyPersonalUse') 
-               format(truetype);
-               font-weight: normal ;
-               font-style: normal;
+        @font-face {
+            font-family: love;
+            src: url('lovelady') formal('opentype'), url('lovelady') format(truetype);
+            font-weight: normal;
+            font-style: normal;
 
         }
-        body{
-            font-family: Arial, Helvetica, sans-serif ;
+
+        body {
+            font-family: Arial, Helvetica, sans-serif;
         }
-        h1{
+
+        h1 {
             font-family: 'love', Times, serif;
             font-size: 3em;
             font-weight: normal;
         }
     </style>
 </head>
+
 <body>
     <h1>o odio sempre será maior que o amor </h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente magnam iusto,
-         sint dicta a labore id officia facilis exercitationem reprehenderit eligendi doloribus perferendis amet non?
-          Tempora saepe odit incidunt aspernatur?</p>
+        sint dicta a labore id officia facilis exercitationem reprehenderit eligendi doloribus perferendis amet non?
+        Tempora saepe odit incidunt aspernatur?</p>
 </body>
+
 </html>
