--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -22,6 +22,8 @@
         background-color: white;
         padding: 10px;
         margin: 10px;
+        border-radius: 10px 20px 30px 40px;
+
     }
 
     article{
